Changed documentation layout